tests/baselines/reference/unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.errors.txt
unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.ts(1,18): error TS6133: 'person' is declared but its value is never read.
unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.ts(2,9): error TS6133: 'unused' is declared but its value is never read.
unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.ts(3,9): error TS6133: 'maker' is declared but its value is never read.
unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.ts(3,26): error TS6133: 'child' is declared but its value is never read.
unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.ts(4,13): error TS6133: 'unused2' is declared but its value is never read.
unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.ts(6,27): error TS6133: 'child2' is declared but its value is never read.
unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.ts(7,13): error TS6133: 'unused3' is declared but its value is never read.


==== unusedLocalsOnFunctionExpressionWithinFunctionDeclaration2.ts (7 errors) ====
    function greeter(person: string, person2: string) {
                     ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
        var maker = function(child: string): void {
            ~~~~~
!!! error TS6133: 'maker' is declared but its value is never read.
                             ~~~~~
!!! error TS6133: 'child' is declared but its value is never read.
            var unused2 = 22;
                ~~~~~~~
!!! error TS6133: 'unused2' is declared but its value is never read.
        }
        var maker2 = function(child2: string): void {
                              ~~~~~~
!!! error TS6133: 'child2' is declared but its value is never read.
            var unused3 = 23;
                ~~~~~~~
!!! error TS6133: 'unused3' is declared but its value is never read.
        }
        maker2(person2);
    }